--- a/VRChat/62/1015362.html
+++ b/VRChat/62/1015362.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "YZ62rAXR3Eg7cd87zsagmThLS+inOXlgqVV8XbjDf+c="></script>
+    "y1INVFpizOlT9lahOtS0SLRYl3MBSHuepobLICNq120="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"３Dモデル：狐火煙管","description":"この商品はVRchat向けのアクセサリとして作成した3Dモデルです。\nお好きな場所に設置する、持たせる、あるいは口に咥えたりなどしてお使いください。\nチェーン部分にはボーンが入っておりますので好きなように曲げたり、ダイナミックボーンなどのボーンを揺らすものを入れてご利用ください。\n\n本商品はblenderで作成し、Unityでの使用を想定して作られたモデルとなります。\n本商品のデータを使用したことで問題が発生した場合、作者は一切責任をとりません。\n\n\n【利用規約】\nこちらのモデルは商用・改変・成人向けなどの様々なコンテンツで使用することができます。\n本商品に含まれるデータを元にして、3Dモデルあるいは画像自体に商品性が依存するもの（例：素材集など）を製造、販売することはできません。\nデータを抜き出せる状態での二次配布は禁止します。\nまた、加工・改変を行った後のモデルも本モデルの規約が適用されます。\n本モデルを使用した時点で、利用規約に同意したものとみなします。\n\n\n【商品内容】\n下記のファイルが梱包されたzipファイルとなります。\n\n・Readme.txt（必ずお読みください）\n・fox_fire_kiseru.unitypackage（モデルとパーティクルが設置されたもの）\n・kiseru.fbx（ポリゴン数：1718）\n・kiseru_tex.png（テクスチャーファイル）\n・kiseru_tex.psd（テクスチャーの編集用ファイル）\n・fire.png（パーティクル用テクスチャ / 狐火）\n・kemuri.png（パーティクル用テクスチャ / 煙）\n・descriptionフォルダ内\n　→ fire_to_smoke.png（狐火を煙に変更する方法）\n　→ rb01.png ～ rb05.png（パーティクルをアバターに追従させる方法）\n　→ shapekey.png（煙管を短くするシェイプキーについて）\nその他説明などについて、分からないことがあれば作者のツイッターにＤＭ、あるいはメールまでお問い合わせください。","url":"https://booth.pm/ja/items/1015362","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/ecbe906e-dd0a-4826-9b04-0f8a857c3ac0/i/1015362/925a0bff-7c3d-4d38-8918-b444e4d23960_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="YZ62rAXR3Eg7cd87zsagmThLS+inOXlgqVV8XbjDf+c="></script>
+    nonce="y1INVFpizOlT9lahOtS0SLRYl3MBSHuepobLICNq120="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1015362/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               194
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1015362/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               194
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
