--- a/VRChat/69/1014169.html
+++ b/VRChat/69/1014169.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "EsB/mNvJRo/5Yfy8rdZjkUBu/NfCTzKEeU7URQ7Go/o="></script>
+    "hvbpNOre0fmZy9+knFZBO14RmphiOWM5G10wy3krj1k="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"HandSpinner","description":"VRChat向けハンドスピナーのモデルデータです。\n羽根部分には疑似ブルームシェーダを使ってあり、こちらも同梱されています。\nブルームのついているワールドで使用すると、疑似ブルームとは別に発光します。\n\n【内容物】\n・unitypackage(下記が含まれます)\n モデルデータ\n プレハブ\n マテリアル\n シェーダ\n 説明書\n\n改変、商用利用、アバターやワールドへの同梱可\n再配布不可","url":"https://booth.pm/ja/items/1014169","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/8eae0ce3-7d8e-4436-9710-ea35a9636d4c/i/1014169/4dd70b3a-d2cb-493a-9ffe-f922239a0d1e_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="EsB/mNvJRo/5Yfy8rdZjkUBu/NfCTzKEeU7URQ7Go/o="></script>
+    nonce="hvbpNOre0fmZy9+knFZBO14RmphiOWM5G10wy3krj1k="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,10 +160,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1014169/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              169
+                              170
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1014169/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              169
+                              170
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
