--- a/VRChat/33/1014133.html
+++ b/VRChat/33/1014133.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "L4Xp5kSxT+dglQoAdfXd9EKXuOrSYE7tociNMgFdXSY="></script>
+    "IyJu3fxTVw6soIAvmYMurzOraQjKiaXuYG7JWOBH/D8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Standard Distance Fade シェーダー","description":"近づくと現れたり消えたりするStandard系のシェーダーだよ！\n消える距離やフェードするときのノイズ具合の調整もできるよ！\n\nMITライセンスだよ！","url":"https://booth.pm/ja/items/1014133","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/a7137b00-b4ea-4679-a5bd-dc626e07566a/i/1014133/3e1e02c5-5fae-4952-bd33-e1ab6afe3ef2_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="L4Xp5kSxT+dglQoAdfXd9EKXuOrSYE7tociNMgFdXSY="></script>
+    nonce="IyJu3fxTVw6soIAvmYMurzOraQjKiaXuYG7JWOBH/D8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1014133/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               698
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1014133/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               698
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
