--- a/VRChat/29/1013629.html
+++ b/VRChat/29/1013629.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "J4pqhYpzOVWk9oMC2vxc7rhnYIG11L1AdJIaNeCBcyM="></script>
+    "892ky35QpHoF/wX0/sZ0oad2AZUibfucBkVGfGCjOgM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"蛇腹剣","description":"VRChatで使えるDynamic Boneで揺れる蛇腹剣です。\nDynamic Bone入れることでゆらゆら揺れます。\n詳しい内容はread meを参照ください。","url":"https://booth.pm/ja/items/1013629","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/952c1078-6805-447e-8b8e-e44f2166d1fd/i/1013629/02fa82c8-1945-42b7-bdd2-65e032db8126_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="J4pqhYpzOVWk9oMC2vxc7rhnYIG11L1AdJIaNeCBcyM="></script>
+    nonce="892ky35QpHoF/wX0/sZ0oad2AZUibfucBkVGfGCjOgM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -152,7 +154,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1013629/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               66
@@ -167,14 +169,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1013629/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               66
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
